@@ -2,6 +2,6 @@ package MyApp::View::SerialiseTable;
 
 use Moo;
 
-extends qw( HTML::StateTable::View::SerialiseTable );
+extends qw( HTML::StateTable::View::Serialise );
 
 1;
